<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center_horizontal"
          android:orientation="vertical">
            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:padding="15dp"
              android:background="#2A9A46"
              android:orientation="vertical">
                <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="#fff"
                  android:textSize="15sp"
                  android:padding="3dp"
                  android:text="@string/reg_mobile"/>
                <EditText
                  android:id="@+id/registerMblNumber"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  style="@style/InputTextStyle"
                  android:inputType="number"
                  android:hint="@string/reg_mobile_hint"/>
                <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="#fff"
                  android:textSize="15sp"
                  android:padding="3dp"
                  android:text="@string/reg_password"/>
                <EditText
                  android:id="@+id/registerPassword"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  style="@style/InputTextStyle"
                  android:inputType="textPassword"
                  android:fontFamily="sans-serif"
                  android:hint="@string/reg_password_hint"/>
                <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="#fff"
                  android:textSize="15sp"
                  android:padding="3dp"
                  android:text="@string/reg_confirmPassword"/>
                <EditText
                  android:id="@+id/registerConfirmPassword"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  style="@style/InputTextStyle"
                  android:inputType="textPassword"
                  android:fontFamily="sans-serif"
                  android:hint="@string/reg_confirmPassword_hint"/>
                <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="#fff"
                  android:textSize="15sp"
                  android:padding="3dp"
                  android:text="@string/reg_name"/>
                <EditText
                  android:id="@+id/registerName"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  style="@style/InputTextStyle"
                  android:hint="@string/reg_name_hint"/>
                <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="#fff"
                  android:textSize="15sp"
                  android:padding="3dp"
                  android:text="@string/reg_cAddress"/>
                <EditText
                  android:id="@+id/registerAddress"
                  android:layout_width="match_parent"
                  android:layout_height="100dp"
                  style="@style/InputTextStyle"
                  android:gravity="start"
                  android:singleLine="false"
                  android:hint="@string/reg_cAddress_hint"/>
                <LinearLayout
                  android:id="@+id/registerLspExtraInformationLayout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
                    <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#fff"
                      android:textSize="15sp"
                      android:visibility="gone"
                      android:padding="3dp"
                      android:text="@string/reg_nid"/>
                    <EditText
                      android:id="@+id/registerIDCard"
                      android:layout_width="match_parent"
                      android:visibility="gone"
                      android:layout_height="wrap_content"
                      style="@style/InputTextStyle"
                      android:inputType="number"
                      android:hint="@string/reg_nid_hint"/>
                    <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#fff"
                      android:textSize="15sp"
                      android:padding="3dp"
                      android:text="@string/reg_pumpType"/>
                    <EditText
                      android:id="@+id/registerPumpType"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/InputTextStyle"
                      android:hint="@string/reg_pumpType_hint"/>
                    <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#fff"
                      android:textSize="15sp"
                      android:padding="3dp"
                      android:text="@string/reg_pumpCapacity"/>
                    <EditText
                      android:id="@+id/registerPumpCapacity"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/InputTextStyle"
                      android:hint="@string/reg_pumpCapacity_hint"/>
                </LinearLayout>
            </LinearLayout>
            <Button
              android:id="@+id/registerSubmitBtn"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:text="@string/reg_registration"
              android:textColor="#fff"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="5dp"
              android:background="#2A9A46"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>