<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
      android:orientation="vertical"
      android:background="#fff"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
        <include layout="@layout/appbar"/>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="15dp"
          android:orientation="vertical"
          android:background="#2A9A46">
            <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="#fff"
              android:textSize="15sp"
              android:padding="3dp"
              android:text="@string/fil_fieldName"/>
            <EditText
              android:id="@+id/fieldNameInputEt"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/InputTextStyle"
              android:hint="@string/fil_fieldName_hint"/>
            <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="#fff"
              android:textSize="15sp"
              android:padding="3dp"
              android:text="@string/fil_cropList"/>
            <Spinner
              android:id="@+id/cropListSpinner"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:background="#fff"
              android:layout_marginBottom="5dp"
              android:entries="@array/crop_list"/>
            <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="#fff"
              android:textSize="15sp"
              android:padding="3dp"
              android:text="@string/fil_lspList"/>
            <Spinner
              android:id="@+id/lspNameListSpinner"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:background="#fff"
              android:layout_marginBottom="5dp"/>
            <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="#fff"
              android:textSize="15sp"
              android:padding="3dp"
              android:text="@string/fil_selectSowingDate"/>
            <Button
              android:id="@+id/fieldSowingDateBtn"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="#fff"
              android:padding="5dp"
              android:layout_marginBottom="4dp"
              android:text="@string/fil_sowingDate"/>
            <LinearLayout
              android:id="@+id/fieldViewDetailsLayout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:visibility="gone"
              android:orientation="vertical">
                <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
                    <Button
                      android:id="@+id/fieldDetailsViewOnMapBtn"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:background="#fff"
                      android:text="@string/fil_viewOnMap"
                      android:padding="5dp"
                      android:layout_height="wrap_content"/>
                    <ToggleButton
                      android:id="@+id/fieldDetailsIrrigationOnOffToggleBtn"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="match_parent"
                      android:textOn="@string/fil_irrOff"
                      android:padding="5dp"
                      android:checked="true"
                      android:textOff="@string/fil_irrOn"/>
                </LinearLayout>
                <CheckBox
                  android:id="@+id/fieldDetailsIrrigationDoneRadioBtn"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="#fff"
                  android:padding="10dp"
                  android:textSize="18sp"
                  android:textStyle="bold"
                  android:text="@string/fil_irrComp"/>
            </LinearLayout>
        </LinearLayout>
        <Button
          android:id="@+id/fieldDetailsUpdateLocationBtn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="50dp"
          android:layout_marginRight="50dp"
          android:background="#4BAA63"
          android:textColor="#fff"
          android:visibility="gone"
          android:text="@string/fil_updateField"/>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
            <Button
              android:id="@+id/fieldDetailsDeleteBtn"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="wrap_content"
              android:textStyle="bold"
              android:background="#2A9A46"
              android:textColor="#fff"
              android:layout_margin="5dp"
              android:visibility="gone"
              android:text="@string/fil_delete"/>
            <Button
              android:id="@+id/fieldDetailsSaveBtn"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="wrap_content"
              android:textStyle="bold"
              android:background="#2A9A46"
              android:textColor="#fff"
              android:layout_margin="5dp"
              android:text="@string/fil_save"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
