<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#fff"
              android:orientation="vertical"
              android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fdl_fieldName"
                    android:textColor="#000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/fieldDetailsFieldName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fdl_smpFieldName"
                    android:textColor="#000"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fdl_farmerName"
                    android:textColor="#000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/fieldDetailsFarmerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fdl_smpFarmerName"
                    android:textColor="#000"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fdl_address"
                    android:textColor="#000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/fieldDetailsFarmerAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fdl_smpAddress"
                    android:textColor="#000"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fdl_phone"
                    android:textColor="#000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/fieldDetailsFarmerPhn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="AAA"
                    android:textColor="#000"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fdl_cropName"
                    android:textColor="#000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/fieldDetailsCropName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fdl_smpCropName"
                    android:textColor="#000"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fdl_sowingDate"
                    android:textColor="#000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/fieldDetailsSowingDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fdl_smpSowingDate"
                    android:textColor="#000"
                    android:textSize="18sp"/>
            </LinearLayout>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Emergence Date : "
                    android:textColor="#000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/fieldDetailsEmergenceDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30 - 06 - 15"
                    android:textColor="#000"
                    android:textSize="18sp"/>
            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/fieldDetailsCallFarmerBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="@string/fdl_callFarmer"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/fieldDetailsShowLocationBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="@string/fdl_map"
                    android:textColor="#fff"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fieldDetailsScheduleBtnLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="gone">

                <!--<Button
                    android:id="@+id/fieldDetailsRescheduleBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="Reschedule\nDate"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="15sp"/>-->

                <Button
                    android:id="@+id/fieldDetailsIrrigationDoneBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="New Irrigation"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lspSuggestionTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="#000"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lspSetIrrigationLayout"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/lspNextIrrigationDateBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fdl_nextIrrigationDate"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/lspSaveNextIrrigationBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/fdl_save"
                        android:textAllCaps="false"
                        android:textColor="#fff"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>